# llm-security-tool

./: .gitignore  README.md  analysis.txt  dummy_chat.txt  mock_target.html  pyproject.toml
ctf_challenge/: main.py
ctf_challenge/ctf_challenge/: index.html
llmsecurity/: attacker.py  browser.py  cli.py  core.py
